Adiciona App users

--- a/templates/shared/base.html
+++ b/templates/shared/base.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{% static '/styles/app.css' %}">
+    <link rel="shortcut icon" href="{% static 'favicon/suntrack.ico' %}" type="image/x-icon">
 </head>
 <body>
     {% include 'partials/_menu.html' %}
