--- a/templates/suntrack-energy/buscar.html
+++ b/templates/suntrack-energy/buscar.html
@@ -1,4 +1,4 @@
-{% extends 'suntrack-energy/base.html' %}
+{% extends 'shared/base.html' %}
 {% load static %}
 {% block content %}
             <section class="conteudo">
